Spring doc customize

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.servlet.context-path=/api
 server.port= 8090
 
 spring.datasource.platform = postgres
-spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
-#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = testtesttest
 spring.jpa.hibernate.ddl-auto = update
