--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/api
 server.port= 8090
 
 spring.datasource.platform = postgres
+#spring.datasource.url = jdbc:postgresql://192.168.49.2:30500/postgres
 #spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
